<resources>
    <string name="app_name">Login Form</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="pass">*************</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_sign_in">Don\'t have an account? Sign in</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
</resources>