<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/sky">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:height="48dp"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:drawableTint="#F3EDED"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:height="48dp"
        android:background="@drawable/stroke"
        android:drawableStart="@drawable/security"
        android:drawablePadding="10dp"
        android:drawableTint="#FAF8F8"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/solid"
        android:text="@string/login"
        android:textColor="@color/white" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_sign_in"
        android:textAlignment="center"
        android:textColor="@color/white" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/button2"
            android:layout_marginStart="30dp"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/solid"
            android:drawableTint="#F3EEEE"
            android:layout_marginEnd="10dp"
            android:text="@string/google" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/button_width"
            android:background="@drawable/solid"
            android:layout_height="wrap_content"
            android:text="@string/facebook"
            android:layout_marginEnd="40dp"/>


    </LinearLayout>

</LinearLayout>



</LinearLayout>
